--- a/limitations.html
+++ b/limitations.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>7. Limitations &mdash; QUAC commit 71b8ebf</title>
+    <title>7. Limitations &mdash; QUAC documentation for commit bd63093</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -26,8 +26,8 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="QUAC commit 71b8ebf" href="index.html" />
-    <link rel="next" title="8. Writing documentation" href="documentation.html" />
+    <link rel="top" title="QUAC documentation for commit bd63093" href="index.html" />
+    <link rel="next" title="8. Documentation" href="documentation.html" />
     <link rel="prev" title="6. FAQ" href="faq.html" /> 
   </head>
   <body>
@@ -35,15 +35,12 @@
       <h3>Navigation</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="General Index"
-             accesskey="I">index</a></li>
-        <li class="right" >
-          <a href="documentation.html" title="8. Writing documentation"
-             accesskey="N">next</a> |</li>
+          <a href="documentation.html" title="8. Documentation"
+             accesskey="N">next</a></li>
         <li class="right" >
           <a href="faq.html" title="6. FAQ"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">QUAC commit 71b8ebf</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit bd63093</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -53,12 +50,7 @@
                         title="previous chapter">6. FAQ</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="documentation.html"
-                        title="next chapter">8. Writing documentation</a></p>
-  <h3>This Page</h3>
-  <ul class="this-page-menu">
-    <li><a href="_sources/limitations.txt"
-           rel="nofollow">Show Source</a></li>
-  </ul>
+                        title="next chapter">8. Documentation</a></p>
 <div id="searchbox" style="display: none">
   <h3>Quick search</h3>
     <form class="search" action="search.html" method="get">
@@ -117,20 +109,16 @@ but I guess it&#8217;s not close enough.)</li>
       <h3>Navigation</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="General Index"
-             >index</a></li>
-        <li class="right" >
-          <a href="documentation.html" title="8. Writing documentation"
-             >next</a> |</li>
+          <a href="documentation.html" title="8. Documentation"
+             >next</a></li>
         <li class="right" >
           <a href="faq.html" title="6. FAQ"
              >previous</a> |</li>
-        <li><a href="index.html">QUAC commit 71b8ebf</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit bd63093</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
         &copy; Copyright 2012-2013, Los Alamos National Security, LLC and others.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
 </html>
