--- a/map_reduce.html
+++ b/map_reduce.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>4. Map-Reduce with makereduce &mdash; QUAC commit 71b8ebf</title>
+    <title>4. Map-Reduce with makereduce &mdash; QUAC documentation for commit bd63093</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="QUAC commit 71b8ebf" href="index.html" />
+    <link rel="top" title="QUAC documentation for commit bd63093" href="index.html" />
     <link rel="next" title="5. Configuration" href="config.html" />
     <link rel="prev" title="3. Preprocessing" href="pipeline.html" /> 
   </head>
@@ -35,15 +35,12 @@
       <h3>Navigation</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="General Index"
-             accesskey="I">index</a></li>
-        <li class="right" >
           <a href="config.html" title="5. Configuration"
-             accesskey="N">next</a> |</li>
+             accesskey="N">next</a></li>
         <li class="right" >
           <a href="pipeline.html" title="3. Preprocessing"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">QUAC commit 71b8ebf</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit bd63093</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -76,11 +73,6 @@
   <h4>Next topic</h4>
   <p class="topless"><a href="config.html"
                         title="next chapter">5. Configuration</a></p>
-  <h3>This Page</h3>
-  <ul class="this-page-menu">
-    <li><a href="_sources/map_reduce.txt"
-           rel="nofollow">Show Source</a></li>
-  </ul>
 <div id="searchbox" style="display: none">
   <h3>Quick search</h3>
     <form class="search" action="search.html" method="get">
@@ -359,20 +351,16 @@ stupid.</td></tr>
       <h3>Navigation</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="General Index"
-             >index</a></li>
-        <li class="right" >
           <a href="config.html" title="5. Configuration"
-             >next</a> |</li>
+             >next</a></li>
         <li class="right" >
           <a href="pipeline.html" title="3. Preprocessing"
              >previous</a> |</li>
-        <li><a href="index.html">QUAC commit 71b8ebf</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit bd63093</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
         &copy; Copyright 2012-2013, Los Alamos National Security, LLC and others.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
 </html>
