--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Search &mdash; QUAC commit 71b8ebf</title>
+    <title>Search &mdash; QUAC documentation for commit bd63093</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/javascript" src="_static/searchtools.js"></script>
-    <link rel="top" title="QUAC commit 71b8ebf" href="index.html" />
+    <link rel="top" title="QUAC documentation for commit bd63093" href="index.html" />
   <script type="text/javascript">
     jQuery(function() { Search.loadIndex("searchindex.js"); });
   </script>
@@ -38,10 +38,7 @@
     <div class="related">
       <h3>Navigation</h3>
       <ul>
-        <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="General Index"
-             accesskey="I">index</a></li>
-        <li><a href="index.html">QUAC commit 71b8ebf</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit bd63093</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -86,15 +83,11 @@
     <div class="related">
       <h3>Navigation</h3>
       <ul>
-        <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="General Index"
-             >index</a></li>
-        <li><a href="index.html">QUAC commit 71b8ebf</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit bd63093</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
         &copy; Copyright 2012-2013, Los Alamos National Security, LLC and others.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
 </html>
