docs for commit 3e8dd20

--- a/getting_started.html
+++ b/getting_started.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>1. Getting started &mdash; QUAC documentation for commit bd63093</title>
+    <title>1. Getting started &mdash; QUAC documentation for commit 3e8dd20</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="QUAC documentation for commit bd63093" href="index.html" />
+    <link rel="top" title="QUAC documentation for commit 3e8dd20" href="index.html" />
     <link rel="next" title="2. Dependencies" href="dependencies.html" />
     <link rel="prev" title="About QUAC" href="index.html" /> 
   </head>
@@ -40,7 +40,7 @@
         <li class="right" >
           <a href="index.html" title="About QUAC"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit bd63093</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit 3e8dd20</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -102,6 +102,11 @@ you may need to consult other sources to fill in some gaps.</p>
 </div>
 <p><em>Note: This creates a read-only repository. If you plan to contribute to
 QUAC, you should fork the repo on Github and clone yours instead.</em></p>
+</li>
+<li><p class="first">Build executables and the documentation:</p>
+<div class="highlight-python"><pre>cd quac
+make</pre>
+</div>
 </li>
 <li><p class="first">Run the tests:</p>
 <div class="highlight-python"><pre>./test.sh</pre>
@@ -189,7 +194,7 @@ watch the log files and e-mail you if something goes wrong.</p>
         <li class="right" >
           <a href="index.html" title="About QUAC"
              >previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit bd63093</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit 3e8dd20</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
