--- a/pipeline.html
+++ b/pipeline.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>3. Preprocessing &mdash; QUAC documentation for commit bd63093</title>
+    <title>3. Preprocessing &mdash; QUAC documentation for commit 3e8dd20</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -26,8 +26,8 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="QUAC documentation for commit bd63093" href="index.html" />
-    <link rel="next" title="4. Map-Reduce with makereduce" href="map_reduce.html" />
+    <link rel="top" title="QUAC documentation for commit 3e8dd20" href="index.html" />
+    <link rel="next" title="4. Map-Reduce with QUACreduce" href="map_reduce.html" />
     <link rel="prev" title="2. Dependencies" href="dependencies.html" /> 
   </head>
   <body>
@@ -35,12 +35,12 @@
       <h3>Navigation</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="map_reduce.html" title="4. Map-Reduce with makereduce"
+          <a href="map_reduce.html" title="4. Map-Reduce with QUACreduce"
              accesskey="N">next</a></li>
         <li class="right" >
           <a href="dependencies.html" title="2. Dependencies"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit bd63093</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit 3e8dd20</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -67,7 +67,7 @@
                         title="previous chapter">2. Dependencies</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="map_reduce.html"
-                        title="next chapter">4. Map-Reduce with <tt class="docutils literal docutils literal docutils literal"><span class="pre">makereduce</span></tt></a></p>
+                        title="next chapter">4. Map-Reduce with QUACreduce</a></p>
 <div id="searchbox" style="display: none">
   <h3>Quick search</h3>
     <form class="search" action="search.html" method="get">
@@ -303,12 +303,12 @@ key/value.</li>
       <h3>Navigation</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="map_reduce.html" title="4. Map-Reduce with makereduce"
+          <a href="map_reduce.html" title="4. Map-Reduce with QUACreduce"
              >next</a></li>
         <li class="right" >
           <a href="dependencies.html" title="2. Dependencies"
              >previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit bd63093</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit 3e8dd20</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
