--- a/config.html
+++ b/config.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>5. Configuration &mdash; QUAC documentation for commit bd63093</title>
+    <title>5. Configuration &mdash; QUAC documentation for commit 3e8dd20</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -26,9 +26,9 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="QUAC documentation for commit bd63093" href="index.html" />
+    <link rel="top" title="QUAC documentation for commit 3e8dd20" href="index.html" />
     <link rel="next" title="6. FAQ" href="faq.html" />
-    <link rel="prev" title="4. Map-Reduce with makereduce" href="map_reduce.html" /> 
+    <link rel="prev" title="4. Map-Reduce with QUACreduce" href="map_reduce.html" /> 
   </head>
   <body>
     <div class="related">
@@ -38,16 +38,16 @@
           <a href="faq.html" title="6. FAQ"
              accesskey="N">next</a></li>
         <li class="right" >
-          <a href="map_reduce.html" title="4. Map-Reduce with makereduce"
+          <a href="map_reduce.html" title="4. Map-Reduce with QUACreduce"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit bd63093</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit 3e8dd20</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
   <p class="topless"><a href="map_reduce.html"
-                        title="previous chapter">4. Map-Reduce with <tt class="docutils literal"><span class="pre">makereduce</span></tt></a></p>
+                        title="previous chapter">4. Map-Reduce with QUACreduce</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="faq.html"
                         title="next chapter">6. FAQ</a></p>
@@ -105,9 +105,9 @@ as a complete listing of and documentation for the various config keys.)</li>
           <a href="faq.html" title="6. FAQ"
              >next</a></li>
         <li class="right" >
-          <a href="map_reduce.html" title="4. Map-Reduce with makereduce"
+          <a href="map_reduce.html" title="4. Map-Reduce with QUACreduce"
              >previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit bd63093</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit 3e8dd20</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
