docs for commit b9b6ab0

--- a/pipeline.html
+++ b/pipeline.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>3. Preprocessing &mdash; QUAC documentation for commit cdafde4</title>
+    <title>3. Preprocessing &mdash; QUAC documentation for commit b9b6ab0</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -26,9 +26,9 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="QUAC documentation for commit cdafde4" href="index.html" />
+    <link rel="top" title="QUAC documentation for commit b9b6ab0" href="index.html" />
     <link rel="next" title="4. Map-Reduce with QUACreduce" href="map_reduce.html" />
-    <link rel="prev" title="2. Dependencies" href="dependencies.html" /> 
+    <link rel="prev" title="2. Collecting data" href="collecting.html" /> 
   </head>
   <body>
     <div class="related">
@@ -38,9 +38,9 @@
           <a href="map_reduce.html" title="4. Map-Reduce with QUACreduce"
              accesskey="N">next</a></li>
         <li class="right" >
-          <a href="dependencies.html" title="2. Dependencies"
+          <a href="collecting.html" title="2. Collecting data"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit cdafde4</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit b9b6ab0</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -63,8 +63,8 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="dependencies.html"
-                        title="previous chapter">2. Dependencies</a></p>
+  <p class="topless"><a href="collecting.html"
+                        title="previous chapter">2. Collecting data</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="map_reduce.html"
                         title="next chapter">4. Map-Reduce with QUACreduce</a></p>
@@ -306,9 +306,9 @@ key/value.</li>
           <a href="map_reduce.html" title="4. Map-Reduce with QUACreduce"
              >next</a></li>
         <li class="right" >
-          <a href="dependencies.html" title="2. Dependencies"
+          <a href="collecting.html" title="2. Collecting data"
              >previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit cdafde4</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit b9b6ab0</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
