--- a/limitations.html
+++ b/limitations.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>7. Limitations &mdash; QUAC documentation for commit cdafde4</title>
+    <title>7. Limitations &mdash; QUAC documentation for commit b9b6ab0</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -26,8 +26,8 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="QUAC documentation for commit cdafde4" href="index.html" />
-    <link rel="next" title="8. Documentation" href="documentation.html" />
+    <link rel="top" title="QUAC documentation for commit b9b6ab0" href="index.html" />
+    <link rel="next" title="8. Citing QUAC" href="citing.html" />
     <link rel="prev" title="6. FAQ" href="faq.html" /> 
   </head>
   <body>
@@ -35,12 +35,12 @@
       <h3>Navigation</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="documentation.html" title="8. Documentation"
+          <a href="citing.html" title="8. Citing QUAC"
              accesskey="N">next</a></li>
         <li class="right" >
           <a href="faq.html" title="6. FAQ"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit cdafde4</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit b9b6ab0</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -49,8 +49,8 @@
   <p class="topless"><a href="faq.html"
                         title="previous chapter">6. FAQ</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="documentation.html"
-                        title="next chapter">8. Documentation</a></p>
+  <p class="topless"><a href="citing.html"
+                        title="next chapter">8. Citing QUAC</a></p>
 <div id="searchbox" style="display: none">
   <h3>Quick search</h3>
     <form class="search" action="search.html" method="get">
@@ -109,12 +109,12 @@ but I guess it&#8217;s not close enough.)</li>
       <h3>Navigation</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="documentation.html" title="8. Documentation"
+          <a href="citing.html" title="8. Citing QUAC"
              >next</a></li>
         <li class="right" >
           <a href="faq.html" title="6. FAQ"
              >previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit cdafde4</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit b9b6ab0</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
