--- a/install.html
+++ b/install.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>1. Installing QUAC &mdash; QUAC documentation for commit b9b6ab0</title>
+    <title>1. Installing QUAC &mdash; QUAC documentation for commit bc316b8</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="QUAC documentation for commit b9b6ab0" href="index.html" />
+    <link rel="top" title="QUAC documentation for commit bc316b8" href="index.html" />
     <link rel="next" title="2. Collecting data" href="collecting.html" />
     <link rel="prev" title="Table of contents" href="index.html" /> 
   </head>
@@ -40,7 +40,7 @@
         <li class="right" >
           <a href="index.html" title="Table of contents"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit b9b6ab0</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit bc316b8</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -107,6 +107,13 @@
 make</pre>
 </div>
 </li>
+<li><p class="first">Prepare the test dataset. (Optional; see <tt class="docutils literal"><span class="pre">twtests/README</span></tt> for details on
+how to get the data.)</p>
+<div class="highlight-python"><pre>cd twtests/tweets
+./get-test-data /path/to/preprocessed/tweets
+cd -</pre>
+</div>
+</li>
 <li><p class="first">Run the tests (this is actually pretty important, as it tells you whether
 you&#8217;ve installed all the dependencies correctly):</p>
 <div class="highlight-python"><pre>./test.sh</pre>
@@ -114,6 +121,7 @@ you&#8217;ve installed all the dependencies correctly):</p>
 <p>(While some parts of QUAC will work if some tests fail, we recommend
 installing everything necessary to make them pass, as this will make your
 life much easier going forward.)</p>
+<p>Note that a working Internet connection is required to run the tests.</p>
 </li>
 </ol>
 <div class="admonition note">
@@ -265,7 +273,7 @@ define=SQLITE_OMIT_LOAD_EXTENSION</li>
         <li class="right" >
           <a href="index.html" title="Table of contents"
              >previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit b9b6ab0</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit bc316b8</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
