--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Search &mdash; QUAC documentation for commit b9b6ab0</title>
+    <title>Search &mdash; QUAC documentation for commit bc316b8</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -27,10 +27,12 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/javascript" src="_static/searchtools.js"></script>
-    <link rel="top" title="QUAC documentation for commit b9b6ab0" href="index.html" />
+    <link rel="top" title="QUAC documentation for commit bc316b8" href="index.html" />
   <script type="text/javascript">
     jQuery(function() { Search.loadIndex("searchindex.js"); });
   </script>
+  
+  <script type="text/javascript" id="searchindexloader"></script>
    
 
   </head>
@@ -38,7 +40,7 @@
     <div class="related">
       <h3>Navigation</h3>
       <ul>
-        <li><a href="index.html">QUAC documentation for commit b9b6ab0</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit bc316b8</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -83,7 +85,7 @@
     <div class="related">
       <h3>Navigation</h3>
       <ul>
-        <li><a href="index.html">QUAC documentation for commit b9b6ab0</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit bc316b8</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
