--- a/install.html
+++ b/install.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>1. Installing QUAC &mdash; QUAC documentation for commit a3b4b16</title>
+    <title>1. Installing QUAC &mdash; QUAC documentation for commit c70f389</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="QUAC documentation for commit a3b4b16" href="index.html" />
+    <link rel="top" title="QUAC documentation for commit c70f389" href="index.html" />
     <link rel="next" title="2. Collecting data" href="collecting.html" />
     <link rel="prev" title="Table of contents" href="index.html" /> 
   </head>
@@ -40,7 +40,7 @@
         <li class="right" >
           <a href="index.html" title="Table of contents"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit a3b4b16</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit c70f389</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -115,6 +115,8 @@ you&#8217;ve installed all the dependencies correctly):</p>
 installing everything necessary to make them pass, as this will make your
 life much easier going forward.)</p>
 <p>Note that a working Internet connection is required to run the tests.</p>
+<p>Some (optional) tests require test data which is not included with QUAC.
+See <tt class="docutils literal"><span class="pre">twtests/README</span></tt> for details.</p>
 </li>
 </ol>
 <div class="admonition note">
@@ -266,7 +268,7 @@ define=SQLITE_OMIT_LOAD_EXTENSION</li>
         <li class="right" >
           <a href="index.html" title="Table of contents"
              >previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit a3b4b16</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit c70f389</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
