docs for commit c57df96

--- a/collecting.html
+++ b/collecting.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>2. Collecting data &mdash; QUAC documentation for commit 9bcb1e6</title>
+    <title>2. Collecting data &mdash; QUAC documentation for commit c57df96</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -26,8 +26,8 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="QUAC documentation for commit 9bcb1e6" href="index.html" />
-    <link rel="next" title="3. Preprocessing" href="pipeline.html" />
+    <link rel="top" title="QUAC documentation for commit c57df96" href="index.html" />
+    <link rel="next" title="3. Preprocessing data" href="pipeline.html" />
     <link rel="prev" title="1. Installing QUAC" href="install.html" /> 
   </head>
   <body>
@@ -35,12 +35,12 @@
       <h3>Navigation</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="pipeline.html" title="3. Preprocessing"
+          <a href="pipeline.html" title="3. Preprocessing data"
              accesskey="N">next</a></li>
         <li class="right" >
           <a href="install.html" title="1. Installing QUAC"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit 9bcb1e6</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit c57df96</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -65,7 +65,7 @@
                         title="previous chapter">1. Installing QUAC</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="pipeline.html"
-                        title="next chapter">3. Preprocessing</a></p>
+                        title="next chapter">3. Preprocessing data</a></p>
 <div id="searchbox" style="display: none">
   <h3>Quick search</h3>
     <form class="search" action="search.html" method="get">
@@ -185,12 +185,12 @@ watch the log files and e-mail you if something goes wrong.</p>
       <h3>Navigation</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="pipeline.html" title="3. Preprocessing"
+          <a href="pipeline.html" title="3. Preprocessing data"
              >next</a></li>
         <li class="right" >
           <a href="install.html" title="1. Installing QUAC"
              >previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit 9bcb1e6</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit c57df96</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
