--- a/map_reduce.html
+++ b/map_reduce.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>4. Map-Reduce with QUACreduce &mdash; QUAC documentation for commit 9bcb1e6</title>
+    <title>4. Map-Reduce with QUACreduce &mdash; QUAC documentation for commit c57df96</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -26,9 +26,9 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="QUAC documentation for commit 9bcb1e6" href="index.html" />
+    <link rel="top" title="QUAC documentation for commit c57df96" href="index.html" />
     <link rel="next" title="5. Time series analysis" href="timeseries.html" />
-    <link rel="prev" title="3. Preprocessing" href="pipeline.html" /> 
+    <link rel="prev" title="3. Preprocessing data" href="pipeline.html" /> 
   </head>
   <body>
     <div class="related">
@@ -38,9 +38,9 @@
           <a href="timeseries.html" title="5. Time series analysis"
              accesskey="N">next</a></li>
         <li class="right" >
-          <a href="pipeline.html" title="3. Preprocessing"
+          <a href="pipeline.html" title="3. Preprocessing data"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit 9bcb1e6</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit c57df96</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -80,7 +80,7 @@
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="pipeline.html"
-                        title="previous chapter">3. Preprocessing</a></p>
+                        title="previous chapter">3. Preprocessing data</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="timeseries.html"
                         title="next chapter">5. Time series analysis</a></p>
@@ -457,9 +457,9 @@ permitted but a null value isn&#8217;t.</td></tr>
           <a href="timeseries.html" title="5. Time series analysis"
              >next</a></li>
         <li class="right" >
-          <a href="pipeline.html" title="3. Preprocessing"
+          <a href="pipeline.html" title="3. Preprocessing data"
              >previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit 9bcb1e6</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit c57df96</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
