--- a/contributing.html
+++ b/contributing.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>10. How to contribute &mdash; QUAC documentation for commit c57df96</title>
+    <title>10. How to contribute &mdash; QUAC documentation for commit 6b395f2</title>
     
     <link rel="stylesheet" href="_static/sphinxdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="QUAC documentation for commit c57df96" href="index.html" />
+    <link rel="top" title="QUAC documentation for commit 6b395f2" href="index.html" />
     <link rel="next" title="11. Release notes" href="release_notes.html" />
     <link rel="prev" title="9. Citing QUAC" href="citing.html" /> 
   </head>
@@ -40,7 +40,7 @@
         <li class="right" >
           <a href="citing.html" title="9. Citing QUAC"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit c57df96</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit 6b395f2</a> &raquo;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar">
@@ -202,7 +202,8 @@ branch directly.)</p>
 <li>Run the tests (they should pass).</li>
 <li><tt class="docutils literal"><span class="pre">make</span> <span class="pre">doc-web</span></tt></li>
 <li>Tag the appropriate commit, e.g.: <tt class="samp docutils literal"><span class="pre">git</span> <span class="pre">tag</span> <span class="pre">-a</span> <span class="pre">v0.</span><em><span class="pre">foo</span></em></tt></li>
-<li>Push with <tt class="docutils literal"><span class="pre">--tags</span></tt>.</li>
+<li><tt class="docutils literal"><span class="pre">git</span> <span class="pre">push</span></tt>, <tt class="docutils literal"><span class="pre">git</span> <span class="pre">push</span> <span class="pre">--tags</span></tt></li>
+<li>Close the relevant milestone.</li>
 </ol>
 </div>
 </div>
@@ -300,7 +301,7 @@ the new version to be published.</p>
         <li class="right" >
           <a href="citing.html" title="9. Citing QUAC"
              >previous</a> |</li>
-        <li><a href="index.html">QUAC documentation for commit c57df96</a> &raquo;</li> 
+        <li><a href="index.html">QUAC documentation for commit 6b395f2</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
